fix(*): layout issue with tournament format

--- a/src-ebleague/app/home/home.component.scss
+++ b/src-ebleague/app/home/home.component.scss
@@ -52,6 +52,7 @@
 
   .info-button {
     margin-left: 24px;
+    margin-top: 0;
   }
 
   // .platinum {
@@ -171,6 +172,7 @@
 
     .info-button {
       margin-left: 0;
+      margin-top: 12px;
     }
   }
 }
